--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.8.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "lottie-react-native": "5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
